# machi

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Makefile  PLAN.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: cli.py  main.py
backend/app/api/: anilist.py  auth.py  cauldron.py  demo.py  deps.py  health.py  mal.py  recommendations.py  router.py  taste_card.py  watchlist.py
backend/app/core/: config.py  exceptions.py  logging.py  metrics.py  request_context.py
backend/app/db/: session.py
backend/app/fixtures/: demo_seed.json
backend/app/models/: __init__.py  anime.py  recommendation.py  user.py  watchlist.py
backend/app/schemas/: anime.py  cauldron.py  recommendation.py  taste_card.py  user.py  watchlist.py
backend/app/services/: anilist.py  anime_catalog.py  auth.py  cauldron.py  mal.py  preference_analyzer.py  rag.py  recommender.py  taste_card.py  vector_store.py
backend/migrations/: env.py
backend/migrations/versions/: 0ad459705780_add_recommendation_persistence_tables.py  5caaed1bcf9b_add_anime_catalog_table_for_knowledge_.py  a0ac6f654e34_create_users_table.py  a3f7c2e8d1b5_add_cauldron_mode_to_recommendation_sessions.py  (+4 more)
backend/tests/: conftest.py  test_anime_catalog.py  test_error_envelope.py  test_feedback_adjustments.py  test_health.py  test_mal_service.py  test_preference_analyzer.py  test_rag.py  test_recommendations_api.py  test_recommender.py  test_settings_validation.py  test_vector_store.py
(+51 files in other folders)
